fix text overlap on front page

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -2916,6 +2916,7 @@ img.uc_rotate {
   }
   h1 {
     font-size: $font_5;
+    min-height: 100px;
   }
   h2 {
     font-size: $font_3;
